# KeyHub

./: README.md  README_CN.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: code.py  icon.icns
src-tauri/scripts/: prepare_app_icon_source.py  prune-icons.mjs
src-tauri/src/: crypto.rs  lib.rs  main.rs  vault.rs
src/components/: EntryEditor.tsx  Modal.tsx
src/i18n/: I18nProvider.tsx  index.ts  messages.ts  secretKind.ts
src/lib/: clipboard.ts  tauri.ts
