[package]
name = "keyhub"
version = "0.1.0"
description = "KeyHub secure vault desktop app"
authors = ["Cursor"]
edition = "2021"

[lib]
name = "keyhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zeroize = "1"
